[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infrasec-audit"
version = "0.1.0"
description = "InfraSec Toolkit - defensive infrastructure audit and reporting"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "InfraSec Toolkit"}]
keywords = ["security", "audit", "cve", "reporting"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.6.0",
  "requests>=2.31.0",
  "jinja2>=3.1.2",
  "reportlab>=4.0.7",
]

[project.optional-dependencies]
pdf = ["weasyprint>=61.0"]

[project.scripts]
infrasec-audit = "infrasec_audit.cli:app"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
